[package]
name = "reservoir"
version = "0.1.0"
authors = ["jetstream0/prussia"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.9", features = ["image"] }
async-std = "1.12.0"
directories-next = "2.0.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
uuid = { version = "1.4.0", features = ["v4"] }
webbrowser = "0.8.10"
chrono = "0.4.26"
image = "0.24.6"
